# cpp-mysql

./: CMakeLists.txt  README.md  config.yaml  kod  kod.cpp  kod_testy.cpp
queries/: select.sql  select_users.sql
